--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,2 +1,2 @@
 install:
-   - ./mvnw clean install -pl jdbc -am -DskipTests
+   - ./mvnw clean install -pl jdbc -am -DskipTests -Drat.ignoreErrors=true
